<resources>
    <string name="app_name">Handbook</string>
    <string name="only_digit_character" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_digit" translatable="false">0123456789</string>
    <string name="only_character" translatable="false">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="str_splash_title">Every drop\nof water counts</string>
    <string name="str_no_internet">The Internet connection appears to be offline.</string>
    <string name="str_notification_settings">Notification Settings</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-2337353105916756~2279901954</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_interstitial_video_id" translatable="false">ca-app-pub-3940256099942544/8691691433</string>
    <string name="admob_rewarded_video_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="str_english">English</string>
    <string name="str_french">French</string>
    <string name="str_german">German</string>
    <string name="str_spanish">Spanish</string>
    <string name="str_hindi">Hindi</string>
    <string name="str_handbook">Handbook</string>
    <string name="str_choose_language">Choose Language</string>
    <string name="str_back">Back</string>
    <string name="str_next">Next</string>
    <string name="str_allow">Allow</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_your_name">Your Name</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_height">Height</string>
    <string name="str_cm">cm</string>
    <string name="str_feet">feet</string>
    <string name="str_kg">kg</string>
    <string name="str_lb">lb</string>
    <string name="str_you_should_drink_at_least">You should drink at least</string>
    <string name="str_to_reach_your_daily_goal">water to reach your daily goal</string>
    <string name="str_set_your_goal_manually">SET YOUR GOAL MANUALLY</string>
    <string name="str_storage_permission">Please allow Water Diary access to photos, media and files on your device.</string>
    <string name="str_your_name_validation">Please enter your name.</string>
    <string name="str_valid_name_validation">Please enter valid name.</string>
    <string name="str_height_validation">Please enter height.</string>
    <string name="str_set_daily_goal">Set daily goal</string>
    <string name="str_set_daily_goal_validation">Please set daily goal.</string>
    <string name="str_save">Save</string>
    <string name="str_note">Note: Your suggested daily goal is a rough estimate based on several factors and should not be used for medical purposes. To obtain your specific hydration needs, please consult your physician.</string>
    <string name="str_wakeup_time">Wake-up Time</string>
    <string name="str_bed_time">Bed Time</string>
    <string name="str_goal_consume">You need to consume $1 to reach your goal of $2.</string>
    <string name="str_min">Mins</string>
    <string name="str_hour">Hour</string>
    <string name="other_factors">Other Factors</string>
    <string name="weather_conditions">Weather Condition</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="snow">Snow</string>
    <string name="active">Active</string>
    <string name="pregnant">Pregnant</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="str_hello">Hello,</string>
    <string name="str_do_more_stretching">Do More Stretching</string>
    <string name="str_store">Store</string>
    <string name="str_health_tips">Health Tips</string>
    <string name="str_logout">Logout</string>
    <string name="str_drink_water">Drink Water</string>
    <string name="str_drink_history">Drink History</string>
    <string name="str_settings">Settings</string>
    <string name="str_drink_report">Drink Report</string>
    <string name="str_rate_us">Rate</string>
    <string name="str_share">Share</string>
    <string name="str_tell_a_friend">Tell a Friend</string>
    <string name="str_achievements">Achievements</string>
    <string name="str_home">Home</string>
    <string name="str_faqs">FAQs</string>
    <string name="str_contact">Contact</string>
    <string name="str_share_text">Hooray...! I drank $1 of water today. Join me to keep hydrated with Water Diary $2</string>
    <string name="str_next_reminder">NEXT REMINDER at $1</string>
    <string name="str_history">History</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="str_your_goal">Your goal</string>
    <string name="str_consumed">Consumed</string>
    <string name="str_container">Container</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_input_some_info_b4_we_get_started">Enter the information below and help us to customize your hydration plan.</string>
    <string name="str_choose_unit">Choose Weight Unit</string>
    <string name="str_choose_capacity_unit">Choose Capacity Unit</string>
    <string name="str_weight">Weight</string>
    <string name="str_skip">Skip</string>
    <string name="str_weight_validation">Please enter weight.</string>
    <string name="str_daily_goal_reached">Daily goal reached!</string>
    <string name="str_share_your_achievement_with_your_friends">Share your achievement with your friends!</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_total">TOTAL</string>
    <string name="str_set_goal">Set Goal</string>
    <string name="str_set_goal_validation">Please set a goal.</string>
    <string name="str_history_remove_confirm_message">Are you sure? Do you want to delete history log?</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_automatic">Automatic</string>
    <string name="str_manual">Manual</string>
    <string name="str_delete_all_reminder">DELETE ALL REMINDERS</string>
    <string name="str_off">Off</string>
    <string name="str_silent">Silent</string>
    <string name="str_auto">Auto</string>
    <string name="str_custom_sound">Custom sound</string>
    <string name="str_vibration">Vibration</string>
    <string name="str_advance_settings">ADVANCED SETTINGS</string>
    <string name="str_you_should_not_drink_more_then_target">You should not drink more than $1 water a day.</string>
    <string name="str_set_reminder">Set Reminder</string>
    <string name="str_reminder">Reminders</string>
    <string name="str_set_alarm_validation">You have already added reminder for this time.</string>
    <string name="str_successfully_set_alarm">You have successfully added this reminder.</string>
    <string name="str_successfully_cancel_alarm">You have successfully canceled this reminder.</string>
    <string name="str_reminder_remove_confirm_message">Are you sure? Do you want to delete reminder?</string>
    <string name="str_reminder_remove_all_confirm_message">Are you sure? Do you want to delete all reminders?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_set_specific_time_reminder">Manually set reminder</string>
    <string name="str_set_specific_time_duration_reminder">Auto reminder</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_from_to_validation">Please select both from &amp; to time.</string>
    <string name="str_from_to_invalid_validation">Please select valid wake-up &amp; bed time.</string>
    <string name="str_interval">Interval</string>
    <string name="str_minutes">Minutes</string>
    <string name="str_every">Every</string>
    <string name="str_no_reminders_added_yet">No reminders added yet!</string>
    <string name="str_no_drink_history_found">No drink history found!</string>
    <string name="str_no_backup_found">No backup found!</string>
    <string name="str_select_your_native_language">Select your native language</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_personal_data_daily_goal_settings">Personal data, Daily goal settings</string>
    <string name="str_disable_notification">Disable Notification</string>
    <string name="str_if_goal_is_achieved">If goal is achieved</string>
    <string name="str_goal">Goal</string>
    <string name="str_disable_sound">Disable Sound</string>
    <string name="str_while_add_water">When you add water</string>
    <string name="str_auto_backup">Auto Backup</string>
    <string name="str_about_us">About Us</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_language">Language</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_faq">FAQ</string>
    <string name="str_backup_and_restore">Backup &amp; Restore</string>
    <string name="str_backup">Backup</string>
    <string name="str_restore">Restore</string>
    <string name="str_change_weight">Change Weight / Capacity</string>
    <string name="str_clear_all_data">Clear all data</string>
    <string name="str_camera">Choose from Camera</string>
    <string name="str_gallery">Choose from Gallery</string>
    <string name="str_remove_photo">Remove Photo</string>
    <string name="app_share_txt">I have been using Water Diary and I think you might like it. Check it out on your phone: #1</string>
    <string name="str_remove_photo_confirmation_message">Are you sure? Do you want to remove profile photo?</string>
    <string name="str_today_completed">Today Completed:</string>
    <string name="str_have_u_had_any_water_yet">Have you had any water yet?</string>
    <string name="str_today">Today</string>
    <string name="str_yesterday">Yesterday</string>
    <string name="str_custom_date">Custom Date</string>
    <string name="str_snooze">Snooze</string>
    <string name="str_snooze_for">Snooze for</string>
    <string name="str_add_water">Add water</string>
    <string name="str_week">WEEK</string>
    <string name="str_month">MONTH</string>
    <string name="str_year">YEAR</string>
    <string name="average_intake">Average Intake</string>
    <string name="drink_frequency">Drink Frequency</string>
    <string name="average_completion">Average Completion</string>
    <string name="day">day</string>
    <string name="times">times</string>
    <string name="time">time</string>
    <string name="str_daily">Daily</string>
    <string name="str_weekly">Weekly</string>
    <string name="str_monthly">Monthly</string>
    <string name="str_yearly">Yearly</string>
    <string name="str_restore_msg">Your data has been restored successfully.</string>
    <string name="str_backup_msg">Your data has been backed up successfully.</string>
    <string name="str_clear_all_data_confirmation_messge">Are you sure? Do you want to clear all backup data?</string>
    <string name="str_restore_all_data_confirmation_messge">Are you sure? Do you want to restore selected data?</string>
    <string name="str_customize">Customize</string>
    <string name="str_customize_your_drink">Customize your drink</string>
    <string name="str_capacity">Capacity ($1)</string>
</resources>