<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:background="@color/app_transparant">

	<androidx.core.widget.NestedScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">


	<LinearLayout
        android:id="@+id/item_block"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/white"
		android:layout_marginEnd="@dimen/dp_15"
		android:padding="@dimen/dp_5">

		<TextView
			android:id="@+id/lbl_sunny"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:includeFontPadding="false"
			android:layout_gravity="center_vertical"
			android:text="@string/sunny"
			android:padding="@dimen/dp_10"
			android:textColor="@color/black"
			android:textSize="@dimen/dp_15"
			android:fontFamily="@font/calibri_regular"/>

		<TextView
			android:id="@+id/lbl_cloudy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:includeFontPadding="false"
			android:layout_gravity="center_vertical"
			android:text="@string/cloudy"
			android:padding="@dimen/dp_10"
			android:textColor="@color/black"
			android:textSize="@dimen/dp_15"
			android:fontFamily="@font/calibri_regular"/>

		<TextView
			android:id="@+id/lbl_rainy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:includeFontPadding="false"
			android:layout_gravity="center_vertical"
			android:text="@string/rainy"
			android:padding="@dimen/dp_10"
			android:textColor="@color/black"
			android:textSize="@dimen/dp_15"
			android:fontFamily="@font/calibri_regular"/>

		<TextView
			android:id="@+id/lbl_snow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:includeFontPadding="false"
			android:layout_gravity="center_vertical"
			android:text="@string/snow"
			android:padding="@dimen/dp_10"
			android:textColor="@color/black"
			android:textSize="@dimen/dp_15"
			android:fontFamily="@font/calibri_regular"/>


    </LinearLayout>

	</androidx.core.widget.NestedScrollView>

</RelativeLayout>