<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnManually"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/dp_15"
        android:text="@string/str_set_specific_time_reminder"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAuto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/dp_15"
        android:text="@string/str_set_specific_time_duration_reminder"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/app_grey"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/dp_15"
        android:text="@string/str_cancel"/>

</LinearLayout>