<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_transparant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_rounded_white_back"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="end"
                android:src="@drawable/ic_cancel"
                android:tint="@color/cross"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/str_height"
                android:textColor="@color/rdo_gender_select"
                android:textSize="@dimen/dp_20"
                android:fontFamily="@font/calibri_bold"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_item_selector"
                android:backgroundTint="#D5EEEC"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:imeOptions="actionDone"
                android:textSize="@dimen/dp_20"
                android:textColor="@color/rdo_gender_select"
                android:fontFamily="@font/calibri_regular"/>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20">

                <RadioButton
                    android:id="@+id/rdo_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:background="@drawable/rdo_back"
                    android:text="@string/str_cm"
                    android:textColor="@drawable/rdo_back"/>

                <RadioButton
                    android:id="@+id/rdo_feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="true"
                    android:background="@drawable/rdo_back_2"
                    android:text="@string/str_feet"
                    android:textColor="@drawable/rdo_back_2"/>

            </RadioGroup>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_120"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/drawable_button">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:layout_centerInParent="true"
                android:text="@string/str_save"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/white"
                android:fontFamily="@font/calibri_regular"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:minWidth="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/str_cancel"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/cancel_color"
                android:fontFamily="@font/calibri_light"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>